# Generative-AI-Powered-Job-Recommender-System

./: README.md  app.py  mcp_server.py  pyproject.toml  requirement.txt
src/: helper.py  job_api.py
